html + css desktop

--- a/index.html
+++ b/index.html
@@ -7,11 +7,26 @@
     <title>Parrot Card Game</title>
     <link rel="stylesheet" href="styles/reset.css">
     <link rel="stylesheet" href="styles/style.css">
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap" rel="stylesheet">
 </head>
 <body>
-   <h1>PARROT CARD GAME</h1>
+    <div class="game-title">
+        <h1>PARROT CARD GAME</h1>
+    </div>
    <ul>
-
+    <li></li>
+    <li></li>
+    <li></li>
+    <li></li>
+    <li></li>
+    <li></li>
+    <li></li>
+    <li></li>
+    <li></li>
+    <li></li>
+    <li></li>
+    <li></li>
    </ul>
    <script src="scripts/script.js"></script> 
 </body>
