mobile css and html + desktop css adjustment

--- a/index.html
+++ b/index.html
@@ -12,22 +12,24 @@
 </head>
 <body>
     <div class="game-title">
-        <h1>PARROT CARD GAME</h1>
+        <h1>PARROT CARD <div>GAME</div></h1>
     </div>
-   <ul>
-    <li></li>
-    <li></li>
-    <li></li>
-    <li></li>
-    <li></li>
-    <li></li>
-    <li></li>
-    <li></li>
-    <li></li>
-    <li></li>
-    <li></li>
-    <li></li>
-   </ul>
+    <main>
+        <ul>
+            <li></li>
+            <li></li>
+            <li></li>
+            <li></li>
+            <li></li>
+            <li></li>
+            <li></li>
+            <li></li>
+            <li></li>
+            <li></li>
+            <li></li>
+            <li></li>
+           </ul>
+    </main>
    <script src="scripts/script.js"></script> 
 </body>
 </html>
