--- a/index.html
+++ b/index.html
@@ -11,6 +11,9 @@
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap" rel="stylesheet">
 </head>
 <body>
+    <div class="time">
+        <span></span>
+    </div>
     <div class="game-title">
         <h1>PARROT CARD <div>GAME</div></h1>
     </div>
@@ -18,6 +21,7 @@
         <ul>
         </ul>
     </main>
-   <script src="scripts/script.js"></script> 
+   <script src="scripts/cards.js"></script>
+   <script src="scripts/game.js"></script>  
 </body>
 </html>
